fixed small bug

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -1688,14 +1688,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save splits\n",
-    "train_df.to_csv(\"data/processed/train_set.csv\")\n",
-    "val_df.to_csv(\"data/processed/val_set.csv\")\n",
-    "test_df.to_csv(\"data/processed/test_set.csv\")"
+    "train_df.to_csv(\"data/processed/train_set.csv\", index=False)\n",
+    "val_df.to_csv(\"data/processed/val_set.csv\", index=False)\n",
+    "test_df.to_csv(\"data/processed/test_set.csv\", index=False)"
    ]
   }
  ],
