--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "12bbb753",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "00d8fb43",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "284f9b70",
    "metadata": {},
    "outputs": [],
@@ -309,111 +309,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "4e94f9fb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1/20] | Time: 44.86s\n",
-      "(Training) Loss: 209395.3289\n",
-      "(Validation) Loss: 204634.9604, MAE: 504.0613, R2: 0.0642\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [2/20] | Time: 41.36s\n",
-      "(Training) Loss: 169892.9257\n",
-      "(Validation) Loss: 146446.5163, MAE: 372.8680, R2: 0.3303\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [3/20] | Time: 40.42s\n",
-      "(Training) Loss: 107767.6871\n",
-      "(Validation) Loss: 86492.6361, MAE: 309.6194, R2: 0.6045\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [4/20] | Time: 40.86s\n",
-      "(Training) Loss: 63574.6003\n",
-      "(Validation) Loss: 51323.4773, MAE: 240.8089, R2: 0.7654\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [5/20] | Time: 40.21s\n",
-      "(Training) Loss: 38451.2152\n",
-      "(Validation) Loss: 41293.6062, MAE: 316.5966, R2: 0.8112\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_epoch5.pth\n",
-      "==========================================================================================\n",
-      "Epoch [6/20] | Time: 40.38s\n",
-      "(Training) Loss: 19103.0614\n",
-      "(Validation) Loss: 22512.2128, MAE: 235.1575, R2: 0.8971\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [7/20] | Time: 40.18s\n",
-      "(Training) Loss: 12012.1156\n",
-      "(Validation) Loss: 8784.0102, MAE: 137.7955, R2: 0.9598\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [8/20] | Time: 39.50s\n",
-      "(Training) Loss: 9529.8003\n",
-      "(Validation) Loss: 7002.2700, MAE: 150.7375, R2: 0.9680\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [9/20] | Time: 42.42s\n",
-      "(Training) Loss: 8244.9295\n",
-      "(Validation) Loss: 5251.2367, MAE: 139.0627, R2: 0.9760\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [10/20] | Time: 42.96s\n",
-      "(Training) Loss: 9054.1865\n",
-      "(Validation) Loss: 7111.9750, MAE: 162.4614, R2: 0.9675\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_epoch10.pth\n",
-      "==========================================================================================\n",
-      "Epoch [11/20] | Time: 44.92s\n",
-      "(Training) Loss: 6572.4880\n",
-      "(Validation) Loss: 3902.8399, MAE: 118.7626, R2: 0.9822\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [12/20] | Time: 45.64s\n",
-      "(Training) Loss: 7589.1032\n",
-      "(Validation) Loss: 2179.1494, MAE: 108.3950, R2: 0.9900\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [13/20] | Time: 44.58s\n",
-      "(Training) Loss: 5462.6657\n",
-      "(Validation) Loss: 4534.3715, MAE: 152.3785, R2: 0.9793\n",
-      "==========================================================================================\n",
-      "Epoch [14/20] | Time: 42.99s\n",
-      "(Training) Loss: 6518.7056\n",
-      "(Validation) Loss: 3446.9025, MAE: 123.4065, R2: 0.9842\n",
-      "==========================================================================================\n",
-      "Epoch [15/20] | Time: 48.65s\n",
-      "(Training) Loss: 5379.6599\n",
-      "(Validation) Loss: 5339.6029, MAE: 168.2838, R2: 0.9756\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_epoch15.pth\n",
-      "==========================================================================================\n",
-      "Epoch [16/20] | Time: 45.96s\n",
-      "(Training) Loss: 7411.2226\n",
-      "(Validation) Loss: 3737.7911, MAE: 149.5980, R2: 0.9829\n",
-      "==========================================================================================\n",
-      "Epoch [17/20] | Time: 43.56s\n",
-      "(Training) Loss: 5665.3624\n",
-      "(Validation) Loss: 3127.2764, MAE: 118.8987, R2: 0.9857\n",
-      "==========================================================================================\n",
-      "Epoch [18/20] | Time: 41.89s\n",
-      "(Training) Loss: 6573.2460\n",
-      "(Validation) Loss: 2084.9705, MAE: 101.8738, R2: 0.9905\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "==========================================================================================\n",
-      "Epoch [19/20] | Time: 43.10s\n",
-      "(Training) Loss: 5838.6183\n",
-      "(Validation) Loss: 2237.7374, MAE: 118.8935, R2: 0.9898\n",
-      "==========================================================================================\n",
-      "Epoch [20/20] | Time: 43.32s\n",
-      "(Training) Loss: 5622.8702\n",
-      "(Validation) Loss: 1440.1590, MAE: 113.1974, R2: 0.9934\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_BEST_R2.pth\n",
-      "✅ Model saved: saved_models\\CryptoInformer_2025-04-10_15-11-19\\CryptoInformer_epoch20.pth\n",
-      "==========================================================================================\n"
+     "ename": "RuntimeError",
+     "evalue": "mat1 and mat2 shapes cannot be multiplied (3584x12 and 11x64)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m training_loss_history, validation_loss_history, mae_history, r2_history, normalizer \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_loader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mNUM_EPOCHS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msave_interval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mSAVE_INTERVAL\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Ryan Lee\\Desktop\\50.038 Computational Data Science\\Digital-Asset-Prediction\\src\\train_eval.py:101\u001b[0m, in \u001b[0;36mtrain_model\u001b[1;34m(model, optimizer, train_dataloader, validation_dataloader, num_epochs, base_dir, save_interval, verbose, device)\u001b[0m\n\u001b[0;32m     98\u001b[0m seq_batch \u001b[38;5;241m=\u001b[39m normalizer(seq_batch)\n\u001b[0;32m    100\u001b[0m \u001b[38;5;66;03m# Forward pass\u001b[39;00m\n\u001b[1;32m--> 101\u001b[0m preds \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mseq_batch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    102\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(preds, target_batch)\n\u001b[0;32m    103\u001b[0m total_training_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m loss\u001b[38;5;241m.\u001b[39mitem()\n",
+      "File \u001b[1;32mc:\\Users\\Ryan Lee\\.conda\\envs\\term6\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1739\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1737\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1738\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1739\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Ryan Lee\\.conda\\envs\\term6\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1750\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1745\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1746\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1747\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1748\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1749\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1750\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1752\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1753\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
+      "File \u001b[1;32mc:\\Users\\Ryan Lee\\Desktop\\50.038 Computational Data Science\\Digital-Asset-Prediction\\src\\models.py:298\u001b[0m, in \u001b[0;36mCryptoInformer.forward\u001b[1;34m(self, x, attn_mask)\u001b[0m\n\u001b[0;32m    294\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, x: torch\u001b[38;5;241m.\u001b[39mTensor, attn_mask\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m torch\u001b[38;5;241m.\u001b[39mTensor:\n\u001b[0;32m    295\u001b[0m     \u001b[38;5;66;03m# x shape: (batch_size, seq_length, input_size)\u001b[39;00m\n\u001b[0;32m    296\u001b[0m     \n\u001b[0;32m    297\u001b[0m     \u001b[38;5;66;03m# Embed input features\u001b[39;00m\n\u001b[1;32m--> 298\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43membedding\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# (batch_size, seq_length, hidden_size)\u001b[39;00m\n\u001b[0;32m    300\u001b[0m     \u001b[38;5;66;03m# Add positional encoding\u001b[39;00m\n\u001b[0;32m    301\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpositional_encoder(x)\n",
+      "File \u001b[1;32mc:\\Users\\Ryan Lee\\.conda\\envs\\term6\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1739\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1737\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1738\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1739\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Ryan Lee\\.conda\\envs\\term6\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1750\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1745\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1746\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1747\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1748\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1749\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1750\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1752\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1753\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
+      "File \u001b[1;32mc:\\Users\\Ryan Lee\\.conda\\envs\\term6\\Lib\\site-packages\\torch\\nn\\modules\\linear.py:125\u001b[0m, in \u001b[0;36mLinear.forward\u001b[1;34m(self, input)\u001b[0m\n\u001b[0;32m    124\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[1;32m--> 125\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinear\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbias\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (3584x12 and 11x64)"
      ]
     }
    ],
@@ -427,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ebb79acc",
    "metadata": {},
    "outputs": [
@@ -496,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "27be54f3",
    "metadata": {},
    "outputs": [
