--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -29,7 +29,100 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "A module that was compiled using NumPy 1.x cannot be run in\n",
+      "NumPy 2.0.1 as it may crash. To support both 1.x and 2.x\n",
+      "versions of NumPy, modules must be compiled with NumPy 2.0.\n",
+      "Some module may need to rebuild instead e.g. with 'pybind11>=2.12'.\n",
+      "\n",
+      "If you are a user of the module, the easiest solution will be to\n",
+      "downgrade to 'numpy<2' or try to upgrade the affected module.\n",
+      "We expect that some modules will need time to support NumPy 2.\n",
+      "\n",
+      "Traceback (most recent call last):  File \"<frozen runpy>\", line 198, in _run_module_as_main\n",
+      "  File \"<frozen runpy>\", line 88, in _run_code\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/ipykernel_launcher.py\", line 17, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/traitlets/config/application.py\", line 1053, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/ipykernel/kernelapp.py\", line 737, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/tornado/platform/asyncio.py\", line 195, in start\n",
+      "    self.asyncio_loop.run_forever()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/asyncio/base_events.py\", line 607, in run_forever\n",
+      "    self._run_once()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/asyncio/base_events.py\", line 1922, in _run_once\n",
+      "    handle._run()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/asyncio/events.py\", line 80, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/ipykernel/kernelbase.py\", line 524, in dispatch_queue\n",
+      "    await self.process_one()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/ipykernel/kernelbase.py\", line 513, in process_one\n",
+      "    await dispatch(*args)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/ipykernel/kernelbase.py\", line 418, in dispatch_shell\n",
+      "    await result\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/ipykernel/kernelbase.py\", line 758, in execute_request\n",
+      "    reply_content = await reply_content\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/ipykernel/ipkernel.py\", line 426, in do_execute\n",
+      "    res = shell.run_cell(\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/ipykernel/zmqshell.py\", line 549, in run_cell\n",
+      "    return super().run_cell(*args, **kwargs)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3046, in run_cell\n",
+      "    result = self._run_cell(\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3101, in _run_cell\n",
+      "    result = runner(coro)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/async_helpers.py\", line 129, in _pseudo_sync_runner\n",
+      "    coro.send(None)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3306, in run_cell_async\n",
+      "    has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3488, in run_ast_nodes\n",
+      "    if await self.run_code(code, result, async_=asy):\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3548, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/var/folders/vr/qwxtvrr17fn2qzlm0z4rq4br0000gn/T/ipykernel_10982/3527346051.py\", line 10, in <module>\n",
+      "    import pandas as pd\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/__init__.py\", line 49, in <module>\n",
+      "    from pandas.core.api import (\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/api.py\", line 28, in <module>\n",
+      "    from pandas.core.arrays import Categorical\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/arrays/__init__.py\", line 1, in <module>\n",
+      "    from pandas.core.arrays.arrow import ArrowExtensionArray\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/arrays/arrow/__init__.py\", line 5, in <module>\n",
+      "    from pandas.core.arrays.arrow.array import ArrowExtensionArray\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/arrays/arrow/array.py\", line 50, in <module>\n",
+      "    from pandas.core import (\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/ops/__init__.py\", line 8, in <module>\n",
+      "    from pandas.core.ops.array_ops import (\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/ops/array_ops.py\", line 56, in <module>\n",
+      "    from pandas.core.computation import expressions\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/computation/expressions.py\", line 21, in <module>\n",
+      "    from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/computation/check.py\", line 5, in <module>\n",
+      "    ne = import_optional_dependency(\"numexpr\", errors=\"warn\")\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/compat/_optional.py\", line 135, in import_optional_dependency\n",
+      "    module = importlib.import_module(name)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/importlib/__init__.py\", line 126, in import_module\n",
+      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/numexpr/__init__.py\", line 24, in <module>\n",
+      "    from numexpr.interpreter import MAX_THREADS, use_vml, __BLOCK_SIZE1__\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "_ARRAY_API not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;31mAttributeError\u001b[0m: _ARRAY_API not found"
+     ]
+    }
+   ],
    "source": [
     "####################\n",
     "# Required Modules #\n",
@@ -51,7 +144,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Ryan Lee\\\\Desktop\\\\50.038 Computational Data Science\\\\Digital-Asset-Prediction'"
+       "'/Users/aishwaryaiyer/Documents/GitHub/Digital-Asset-Prediction'"
       ]
      },
      "execution_count": 3,
@@ -511,6 +604,221 @@
     "crypto = crypto.bfill() # Backfill missing market_cap values\n",
     "crypto = crypto.set_index('date').sort_index()\n",
     "crypto.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.5 Added Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>ATR</th>\n",
+       "      <th>CC</th>\n",
+       "      <th>Top</th>\n",
+       "      <th>Btm</th>\n",
+       "      <th>Buy</th>\n",
+       "      <th>Sell</th>\n",
+       "      <th>ODR</th>\n",
+       "      <th>Trend</th>\n",
+       "      <th>WM</th>\n",
+       "      <th>Band</th>\n",
+       "      <th>last_pivot</th>\n",
+       "      <th>coin_label</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-04-04 08:00:00</th>\n",
+       "      <td>0.00088</td>\n",
+       "      <td>0.00088</td>\n",
+       "      <td>0.00088</td>\n",
+       "      <td>0.00088</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.00088</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.00088</td>\n",
+       "      <td>REEF-USDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-04-04 08:00:00</th>\n",
+       "      <td>0.61500</td>\n",
+       "      <td>0.61800</td>\n",
+       "      <td>0.60100</td>\n",
+       "      <td>0.61100</td>\n",
+       "      <td>3379347.8</td>\n",
+       "      <td>0.076051</td>\n",
+       "      <td>-0.006504</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.61100</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.59500</td>\n",
+       "      <td>DYDX-USDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-04-04 08:00:00</th>\n",
+       "      <td>0.23030</td>\n",
+       "      <td>0.23300</td>\n",
+       "      <td>0.22880</td>\n",
+       "      <td>0.23180</td>\n",
+       "      <td>3707525.0</td>\n",
+       "      <td>0.027796</td>\n",
+       "      <td>0.006950</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.23180</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.22670</td>\n",
+       "      <td>MINA-USDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-04-04 08:00:00</th>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.099757</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>BNX-USDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-04-04 08:00:00</th>\n",
+       "      <td>0.26181</td>\n",
+       "      <td>0.26353</td>\n",
+       "      <td>0.25870</td>\n",
+       "      <td>0.26231</td>\n",
+       "      <td>8374758.0</td>\n",
+       "      <td>0.031335</td>\n",
+       "      <td>0.001948</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.26231</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.25644</td>\n",
+       "      <td>SAND-USDT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Open     High      Low    Close     Volume       ATR  \\\n",
+       "Time                                                                           \n",
+       "2025-04-04 08:00:00  0.00088  0.00088  0.00088  0.00088        0.0  0.000035   \n",
+       "2025-04-04 08:00:00  0.61500  0.61800  0.60100  0.61100  3379347.8  0.076051   \n",
+       "2025-04-04 08:00:00  0.23030  0.23300  0.22880  0.23180  3707525.0  0.027796   \n",
+       "2025-04-04 08:00:00  2.00000  2.00000  2.00000  2.00000        0.0  0.099757   \n",
+       "2025-04-04 08:00:00  0.26181  0.26353  0.25870  0.26231  8374758.0  0.031335   \n",
+       "\n",
+       "                           CC  Top  Btm  Buy  Sell  ODR  Trend       WM  Band  \\\n",
+       "Time                                                                            \n",
+       "2025-04-04 08:00:00  0.000000    0    0    0     0    0    2.0  0.00088   1.0   \n",
+       "2025-04-04 08:00:00 -0.006504    0    0    0     0    0    2.0  0.61100   1.0   \n",
+       "2025-04-04 08:00:00  0.006950    0    0    0     0    0    1.0  0.23180   6.0   \n",
+       "2025-04-04 08:00:00  0.000000    0    0    0     0    0    1.0  2.00000   6.0   \n",
+       "2025-04-04 08:00:00  0.001948    0    0    0     0    0    1.0  0.26231   6.0   \n",
+       "\n",
+       "                     last_pivot coin_label  \n",
+       "Time                                        \n",
+       "2025-04-04 08:00:00     0.00088  REEF-USDT  \n",
+       "2025-04-04 08:00:00     0.59500  DYDX-USDT  \n",
+       "2025-04-04 08:00:00     0.22670  MINA-USDT  \n",
+       "2025-04-04 08:00:00     2.00000   BNX-USDT  \n",
+       "2025-04-04 08:00:00     0.25644  SAND-USDT  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crypto_full = pd.read_csv(\"data/raw/collated_data.csv\")\n",
+    "crypto_full['Time'] = pd.to_datetime(crypto_full['Time'])\n",
+    "crypto_full = crypto_full.set_index('Time').sort_index(ascending=False)\n",
+    "crypto_full.head()"
    ]
   },
   {
@@ -1715,7 +2023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
